# Notification-Manager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
include/: API.hpp
libnotifapi/: API.cpp
modules/internal_api/: CMakeLists.txt  InternalAPIModule.cpp
modules/internal_api/include/: APIRequest.hpp  HTTPContentTypeJSON.hpp  InternalAPIModule.hpp  main.hpp  v1.send.hpp
modules/internal_api/requests/: APIRequest.cpp  HTTPContentType.cpp  HTTPContentTypeJSON.cpp  v1.send.cpp
modules/simple_module/: Module.hpp
modules/telegram/: CMakeLists.txt  TelegramModule.cpp
modules/telegram/include/: TelegramModule.hpp
test/: main.cpp
